--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="head">
-        <h1 class="logo">praRoz</h1>
-    </div>    
     <nav>
+        <div class="head">
+            <h1 class="logo">praRoz</h1>
+        </div> 
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -18,23 +18,25 @@
             <li><a href="#">DESIGN</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
-    </nav>    
-    <div class="search">
-        <input type="search" placeholder="type to text" class="srch"><a href="#"><button class="btn">search</button></a>
-    </div>
-    <div class="cnt">
-        <h1>web Design &<br><span>Development</span><br> Course</h1>
-        <p>Web design is a specialization of the design stream.They also use HTML, <br>CSS,WYSIWYG editing software,mark up validators etc, <br> to create design elements.</p><button class="cnt-btn"><a href="#">JOIN US</a></button>
-    </div>
-    <div class="form">
-        <h2>Login Here</h2>
-        <input type="email" name="email" placeholder="Enter Email Here">
-        <input type="password" placeholder="Enter Password Here">
-        <button class="btrn"><a href="#">Login</a></button>
+        <div class="search">
+            <input type="search" placeholder="Type to search" class="srch"><a href="#"><button class="btn">search</button></a>
+        </div>
+    </nav>
+    <div class="body">    
+        <div class="cnt">
+            <h1>web Design &<br><span>Development</span><br> Course</h1>
+            <p>Web design is a specialization of the design stream.They also use HTML, <br>CSS,WYSIWYG editing software,mark up validators etc, <br> to create design elements.</p><button class="cnt-btn"><a href="#">JOIN US</a></button>
+        </div>
+        <div class="form">
+            <h2>Login Here</h2>
+            <input type="email" name="email" placeholder="Enter Email Here">
+            <input type="password" placeholder="Enter Password Here">
+            <button class="btrn"><a href="#">Login</a></button>
 
-        <p class="link">Don't have an account<br>
-        <a href="#">Sign up</a> here</p>
-        <p class="liw">log in with</p>
+            <p class="link">Don't have an account<br>
+            <a href="#">Sign up</a> here</p>
+            <p class="liw">log in with</p>
+        </div>
     </div>
 </body>
 </html>
